--- a/A_dbms/templates/dbms/meeting/scan/tab/articles.html
+++ b/A_dbms/templates/dbms/meeting/scan/tab/articles.html
@@ -30,7 +30,7 @@
                         {{ article.article_num }}</a></td>
                 {% endif %}
                 <td>{{ article.custom }}</td>
-                <td>{{ article.amount }}</td>
+                <td align="right">{{ article.amount }}</td>
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
