--- a/A_dbms/templates/dbms/pigeonhole/extra/js-pigeonhole-add.html
+++ b/A_dbms/templates/dbms/pigeonhole/extra/js-pigeonhole-add.html
@@ -35,6 +35,9 @@
                 case ('41'):{#已归档#}
                     $('#form_pigeonhole_num').show();
                     break;
+                case ('99'):{#无需归档#}
+                    $('#form_pigeonhole_add').show();
+                    break;
                 default:
                     $('.extend').hide()
             }
