--- a/A_dbms/templates/dbms/report/balance/balance-class-control.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-control.html
@@ -10,7 +10,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for control in provide_groups_control %}
+        {% for control in article_groups_control %}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ control.notify__agree__lending__summary__control__name }}</td>
