--- a/A_dbms/templates/dbms/meeting/scan/meeting-tabs.html
+++ b/A_dbms/templates/dbms/meeting/scan/meeting-tabs.html
@@ -7,6 +7,9 @@
         <li role="presentation">
             <a href="#expert" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab">参会评委</a></li>
+        <li role="presentation">
+            <a href="#feedback" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab">反馈意见</a></li>
     </ul>
     <!-- Tab panes -->
     <div class="tab-content">
@@ -14,5 +17,7 @@
             {% include 'dbms/meeting/scan/tab/articles.html' %}</div>
         <div role="tabpanel" class="tab-pane" id="expert"> <!--评审委员-->
             {% include 'dbms/meeting/scan/tab/experts.html' %}</div>
+        <div role="tabpanel" class="tab-pane" id="feedback"> <!--反馈意见-->
+            {% include 'dbms/meeting/scan/tab/feedback.html' %}</div>
     </div>
 </div>
