--- a/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal-summary-scan.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}{{ meeting_obj.num }}{% endblock %}
+{% block title %}{{ article_obj.article_num }}{% endblock %}
 {% block extra-css %}
     <style>
         body {
