--- a/A_dbms/templates/dbms/appraisal/summary/summary-detail.html
+++ b/A_dbms/templates/dbms/appraisal/summary/summary-detail.html
@@ -1,6 +1,6 @@
 {% load mytags %}
 <tr style="border: 1px solid black">{#评审意见#}
-    <th style="border: 1px solid black">评审意见</th>
+    <td style="border: 1px solid black">评审意见</td>
     <td>
         <table>
             <tr>
