--- a/A_dbms/templates/dbms/report/balance-class-provide.html
+++ b/A_dbms/templates/dbms/report/balance-class-provide.html
@@ -24,6 +24,8 @@
             {% include 'dbms/report/balance/balance-class-control.html' %}
         {% elif  kwargs.class_typ == 71 %}
             {% include 'dbms/report/balance/balance-class-branch.html' %}
+        {% elif  kwargs.class_typ == 81 %}
+            {% include 'dbms/report/balance/balance-class-organization.html' %}
         {% endif %}
     </div>
 {% endblock %}
