--- a/A_dbms/templates/dbms/report/balance/balance-class-branch.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-branch.html
@@ -5,15 +5,15 @@
         <tr style="text-align: center">
             <th>序号</th>
             <th>放款银行</th>
-            <th>项目笔数</th>
+            <th>放款笔数</th>
             <th>担保余额</th>
         </tr>
         </thead>
         <tbody>
-        {% for branch in article_groups_branch %}
+        {% for branch in provide_groups_branch %}
             <tr>
                 <td>{{ forloop.counter }}</td>
-                <td>{{ branch.lending_summary__agree_lending__branch__short_name }}</td>
+                <td>{{ branch.notify__agree__branch__short_name }}</td>
                 <td align="right">{{ branch.con }}</td>
                 <td align="right">{{ branch.sum|floatformat:2 }}</td>
             </tr>
