--- a/A_dbms/templates/dbms/report/balance/balance-class-breed.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-breed.html
@@ -5,7 +5,7 @@
         <tr style="text-align: center">
             <th>序号</th>
             <th>授信品种</th>
-            <th>项目笔数</th>
+            <th>放款笔数</th>
             <th>担保余额</th>
         </tr>
         </thead>
