--- a/A_dbms/templates/dbms/warrant/modl/guaranty-del-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/guaranty-del-mod.html
@@ -1,9 +1,9 @@
 <div class="modal fade bs-example-modal-sm" id="delGuarantyModal"
-     tabindex="-1" role="dialog" aria-labelledby="delMeetingArticleModal">
+     tabindex="-1" role="dialog" aria-labelledby="delGuarantyModal">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delMeetingArticleModalLabel">删除他权与权证对应关系
+                <h4 class="modal-title" id="delGuarantyModalLabel">删除他权与权证对应关系
                     <input style="display: none" name="warrant_id" value="{{ warrant_obj.id }}">
                     <input style="display: none" name="guaranty_id" id="delGuarantyId">
                 </h4>
