--- a/A_dbms/templates/dbms/custom/custom/custom-table.html
+++ b/A_dbms/templates/dbms/custom/custom/custom-table.html
@@ -1,7 +1,6 @@
 <div class="table-responsive">
     {#"table-responsive":表格响应式布局#}
-    <table class="table table-bordered table-hover
-                table-condensed active">
+    <table class="table table-bordered table-hover table-condensed active">
         {#"table-bordered":表格表格边框#}
         {#"table-hover":表格悬停变色#}
         {#"table-condensed":表格紧缩#}
@@ -13,10 +12,9 @@
             <th>联系地址</th>
             <th>联系人</th>
             <th>联系电话</th>
-            <th>授信总额</th>
-            <th>流贷余额</th>
-            <th>承兑余额</th>
-            <th>保函余额</th>
+            <th>仅担保</th>
+            <th>行业</th>
+            <th>区域</th>
         </tr>
         </thead>
         <tbody>
@@ -27,16 +25,14 @@
                 <td>{{ custom.contact_addr }}</td>
                 <td>{{ custom.linkman }}</td>
                 <td>{{ custom.contact_num }}</td>
-                <td align="right">{{ custom.credit_amount }}</td>
-                <td align="right">{{ custom.custom_flow }}</td>
-                <td align="right">{{ custom.custom_accept }}</td>
-                <td align="right">{{ custom.custom_back }}</td>
+                <td>{{ custom.counter_only }}</td>
+                {% if custom.genre == 1 %}
+                    <td>{{ custom.company_custome.idustry.name }}</td>
+                    <td>{{ custom.company_custome.district.name }}</td>
+                {% endif %}
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
     {% include 'dbms/board/page.html' %}
-
-
 </div>
