--- a/A_dbms/templates/dbms/report/balance/balance-class-control.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-control.html
@@ -5,12 +5,12 @@
         <tr style="text-align: center">
             <th>序号</th>
             <th>风控专员</th>
-            <th>项目笔数</th>
+            <th>放款笔数</th>
             <th>担保余额</th>
         </tr>
         </thead>
         <tbody>
-        {% for control in article_groups_control %}
+        {% for control in provide_groups_control %}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ control.notify__agree__lending__summary__control__name }}</td>
