--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/valuate.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/valuate.html
@@ -8,25 +8,24 @@
             <th>评估日期</th>
             <th>评估说明</th>
             <th>创建人</th>
-            {% if  PAGE_TITAL == '权证预览' %}
-                <th>操作</th>
-            {% endif %}
+{#            {% if  PAGE_TITAL == '权证预览' %}#}
+            {#                <th>操作</th>#}
+            {#            {% endif %}#}
         </tr>
         </thead>
-        <tbody>
-
+        <tbody id="evaluate-tb">
         {% for evaluate in warrant_obj.evaluate_warrant.all %}
-            <tr>
+            <tr evaluate-nid="{{ evaluate.id }}">
                 <td>{{ forloop.counter }}</td>
                 <td>{{ evaluate.get_evaluate_state_display }}</td>
                 <td>{{ evaluate.evaluate_value }}</td>
                 <td>{{ evaluate.evaluate_date }}</td>
                 <td>{{ evaluate.evaluate_explain|default_if_none:"" }}</td>
                 <td>{{ evaluate.evaluator.name }}</td>
-                {% if  PAGE_TITAL == '权证预览' %}
-                    <td><a class="btn btn-danger btn-xs delEvaluateB">删除</a></td>
-                    </tr>
-                {% endif %}
+{#                {% if  PAGE_TITAL == '权证预览' %}#}
+{#                    <td><a class="btn btn-danger btn-xs delEvaluateB">删除</a></td>#}
+{#                    </tr>#}
+{#                {% endif %}#}
         {% endfor %}
         </tbody>
     </table>
