--- a/A_dbms/templates/dbms/warrant/warrant-scan.html
+++ b/A_dbms/templates/dbms/warrant/warrant-scan.html
@@ -11,6 +11,7 @@
         {% include 'dbms/warrant/modl/guaranty-add-mod.html' %}
         {% include 'dbms/warrant/modl/guaranty-del-mod.html' %}
         {% include 'dbms/warrant/modl/storages-add-mod.html' %}
+        {% include 'dbms/warrant/modl/storages-del-mod.html' %}
         {% include 'dbms/warrant/modl/housebag-add-mod.html' %}
         {% include 'dbms/warrant/modl/draftbag-add-mod.html' %}
         {% include 'dbms/warrant/modl/evaluate-add-mod.html' %}
@@ -25,6 +26,7 @@
     {% include 'dbms/warrant/extra/js-guaranty-add.html' %}
     {% include 'dbms/warrant/extra/js-guaranty-del.html' %}
     {% include 'dbms/warrant/extra/js-storages-add.html' %}
+    {% include 'dbms/warrant/extra/js-storages-del.html' %}
     {% include 'dbms/warrant/extra/js-housebag-add.html' %}
     {% include 'dbms/warrant/extra/js-draftbag-add.html' %}
     {% include 'dbms/warrant/extra/js-evaluate-add.html' %}
